Deduplicate architecture content between CLAUDE.md and docs
Move Key Directories to docs/ARCHITECTURE.md and replace CLAUDE.md's
Architecture section with links to the docs files.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>