@@ -9,7 +9,6 @@ A long-lived, stateful decision engine built on Drools with:
 - Full-depth fact provenance with human-readable explanations
 - REST API for all consumers (services, dashboards, third parties, CLI)
 - Zero-downtime rule hot swap via DRL upload
-- Docker/Kubernetes deployment
 
 ---
 
@@ -24,7 +23,6 @@ A long-lived, stateful decision engine built on Drools with:
 | Provenance | Full derivation tree | Agenda + runtime listener correlation; async DB persistence |
 | API consumers | Services, dashboard, third parties, CLI | OpenAPI spec; API key auth; structured errors; SSE for dashboard |
 | Multi-tenancy | Single tenant | One session per instance; extend later via multiple instances |
-| Deployment | Docker / Kubernetes | Health/readiness probes; graceful shutdown; resource limits |
 
 ---
 
@@ -33,7 +31,7 @@ A long-lived, stateful decision engine built on Drools with:
 | Component | Technology | Rationale |
 |-----------|-----------|-----------|
 | **Runtime** | Java 21 (virtual threads) | Best Drools compatibility; virtual threads for cheap REST concurrency |
-| **Framework** | Quarkus 3.x | Fastest startup, lowest footprint, native Drools/KIE ecosystem affinity, excellent K8s support, dev mode with live reload |
+| **Framework** | Quarkus 3.x | Fastest startup, lowest footprint, native Drools/KIE ecosystem affinity, dev mode with live reload |
 | **Build** | Gradle (Kotlin DSL) | Fast incremental builds, `--continuous` for test-driven DRL development |
 | **Rule engine** | Drools 8.x (latest) | PHREAK algorithm, TMS, CEP/Fusion, temporal operators |
 | **Database** | PostgreSQL 16 | JSONB for flexible storage, BYTEA for checkpoint blobs, robust transactions |
@@ -43,10 +41,24 @@ A long-lived, stateful decision engine built on Drools with:
 | **Auth** | API keys (simple) → extensible to OAuth2/OIDC | Third-party access requires auth; internal services use shared keys initially |
 | **Serialization** | Jackson (API), MessagePack (checkpoints) | JSON for humans, compact binary for storage |
 | **Compression** | LZ4 | Fast compression for checkpoint blobs |
-| **Containerization** | Docker multi-stage build | Small image, reproducible builds |
 | **Testing** | JUnit 5 + Quarkus Test + Testcontainers | Real PostgreSQL in tests, no mocks |
-| **Observability** | Micrometer → Prometheus + Quarkus Health | K8s-native metrics and probes |
 | **API docs** | SmallRye OpenAPI (Swagger UI) | Auto-generated spec; clients can codegen |
+
+---
+
+## Key Directories
+
+- `src/main/java/com/sky/synome/` — Main application code
+  - `config/` — CDI producers and typed config (`JooqProducer`, `EngineConfig`)
+  - `core/` — Engine session lifecycle, changeset processing, rule compilation, hot swap
+  - `changeset/` — Changeset model, log, replayer, validator
+  - `checkpoint/` — Serialization (MessagePack + LZ4), PostgreSQL persistence, recovery
+  - `provenance/` — Derivation tracking, explanation, async persistence
+  - `api/` — REST resources and DTOs
+- `src/main/resources/db/migration/` — Flyway SQL migrations (V001–V005)
+- `src/main/resources/rules/` — DRL rule files
+- `src/main/resources/application.properties` — Quarkus config (dev/prod profiles)
+- `gradle/libs.versions.toml` — Version catalog for all dependencies
 
 ---
 
@@ -90,137 +102,6 @@ Working Memory
 
 This three-way split is the architectural backbone. Every component asks:
 "Is this a base fact, an event, or a derived fact?" and behaves accordingly.
-
----
-
-## Project Structure
-
-```
-decision-engine/
-├── build.gradle.kts
-├── settings.gradle.kts
-├── gradle/
-│   └── libs.versions.toml
-├── Dockerfile
-├── k8s/
-│   ├── deployment.yaml
-│   ├── service.yaml
-│   ├── configmap.yaml
-│   └── hpa.yaml
-│
-├── src/main/
-│   ├── java/com/example/engine/
-│   │   ├── DecisionEngineApp.java
-│   │   │
-│   │   ├── core/
-│   │   │   ├── EngineSession.java               # Long-lived session lifecycle
-│   │   │   ├── ChangesetProcessor.java           # Applies changesets to session
-│   │   │   ├── RuleCompiler.java                 # Compiles DRL → KieBase
-│   │   │   ├── RuleHotSwapper.java               # Zero-downtime rule upgrades
-│   │   │   ├── FactRegistry.java                 # factKey → FactHandle for base facts
-│   │   │   ├── EventReplayWindow.java            # Tracks replay window for events
-│   │   │   ├── SessionLock.java                  # Single-writer enforcement
-│   │   │   └── ClockManager.java                 # Pseudo clock management for replay
-│   │   │
-│   │   ├── changeset/
-│   │   │   ├── Changeset.java                    # Immutable changeset record
-│   │   │   ├── ChangesetEntry.java               # Single operation (fact or event)
-│   │   │   ├── EntryKind.java                    # FACT or EVENT
-│   │   │   ├── ChangesetAction.java              # UPSERT, DELETE (facts); EMIT (events)
-│   │   │   ├── ChangesetLog.java                 # Append-only PostgreSQL store
-│   │   │   ├── ChangesetReplayer.java            # Replay from checkpoint
-│   │   │   └── ChangesetValidator.java           # Schema validation before apply
-│   │   │
-│   │   ├── checkpoint/
-│   │   │   ├── CheckpointManager.java            # Periodic + on-demand snapshots
-│   │   │   ├── CheckpointStore.java              # PostgreSQL persistence
-│   │   │   ├── FactSerializer.java               # MessagePack + LZ4
-│   │   │   └── CheckpointRecovery.java           # Restore + replay on startup
-│   │   │
-│   │   ├── provenance/
-│   │   │   ├── ProvenanceTracker.java            # In-memory derivation graph
-│   │   │   ├── ProvenanceAgendaListener.java     # Captures firing context
-│   │   │   ├── ProvenanceRuntimeListener.java    # Captures fact changes
-│   │   │   ├── ProvenanceStore.java              # Async PostgreSQL persistence
-│   │   │   ├── DerivationTree.java               # Tree structure
-│   │   │   ├── Explainer.java                    # Human-readable explanations
-│   │   │   └── ProvenanceExporter.java           # DOT/JSON graph export
-│   │   │
-│   │   ├── api/
-│   │   │   ├── ChangesetResource.java            # POST /changesets
-│   │   │   ├── FactResource.java                 # GET /facts/**
-│   │   │   ├── QueryResource.java                # POST /queries/{name}
-│   │   │   ├── ProvenanceResource.java           # GET /provenance/**
-│   │   │   ├── RuleResource.java                 # POST /rules, GET /rules/**
-│   │   │   ├── CheckpointResource.java           # POST/GET /checkpoints
-│   │   │   ├── EventStreamResource.java          # GET /stream (SSE)
-│   │   │   ├── HealthResource.java               # Readiness/liveness
-│   │   │   ├── ApiKeyFilter.java                 # Auth filter
-│   │   │   ├── ErrorMapper.java                  # Structured error responses
-│   │   │   └── dto/
-│   │   │       ├── ChangesetRequest.java
-│   │   │       ├── ChangesetResponse.java
-│   │   │       ├── FactResponse.java
-│   │   │       ├── EventEntry.java
-│   │   │       ├── ProvenanceResponse.java
-│   │   │       ├── ExplainResponse.java
-│   │   │       ├── RuleUploadRequest.java
-│   │   │       ├── RuleUploadResponse.java
-│   │   │       ├── QueryRequest.java
-│   │   │       ├── QueryResponse.java
-│   │   │       ├── HealthResponse.java
-│   │   │       └── ErrorResponse.java
-│   │   │
-│   │   └── config/
-│   │       ├── EngineConfig.java                 # Typed config (@ConfigMapping)
-│   │       └── JooqProducer.java                 # jOOQ DSLContext CDI producer
-│   │
-│   └── resources/
-│       ├── application.properties
-│       ├── db/migration/
-│       │   ├── V001__changeset_log.sql
-│       │   ├── V002__checkpoints.sql
-│       │   ├── V003__provenance.sql
-│       │   ├── V004__rule_versions.sql
-│       │   └── V005__api_keys.sql
-│       └── rules/
-│           └── bootstrap-rules.drl
-│
-├── src/test/
-│   ├── java/com/example/engine/
-│   │   ├── core/
-│   │   │   ├── ChangesetProcessorTest.java
-│   │   │   ├── RuleHotSwapperTest.java
-│   │   │   ├── EngineSessionTest.java
-│   │   │   └── EventExpirationTest.java
-│   │   ├── changeset/
-│   │   │   ├── ChangesetReplayerTest.java
-│   │   │   └── ChangesetIdempotencyTest.java
-│   │   ├── checkpoint/
-│   │   │   ├── CheckpointRoundTripTest.java
-│   │   │   └── CheckpointWithEventsTest.java
-│   │   ├── provenance/
-│   │   │   ├── ProvenanceTrackerTest.java
-│   │   │   ├── ExplainerTest.java
-│   │   │   └── CepProvenanceTest.java
-│   │   ├── api/
-│   │   │   ├── ChangesetResourceTest.java
-│   │   │   ├── RuleResourceTest.java
-│   │   │   └── AuthFilterTest.java
-│   │   └── scenarios/
-│   │       ├── FullLifecycleTest.java
-│   │       ├── HotSwapWithCepTest.java
-│   │       ├── CrashRecoveryTest.java
-│   │       └── EventWindowReplayTest.java
-│   └── resources/
-│       └── test-rules/
-│           ├── simple-rules.drl
-│           ├── cep-rules.drl
-│           └── upgrade-v2-rules.drl
-│
-└── docs/
-    └── architecture.md
-```
 
 ---
 
@@ -308,7 +189,7 @@ CREATE TABLE changeset_log (
     checksum        TEXT NOT NULL,
     submitted_by    TEXT,
     applied_at      TIMESTAMPTZ NOT NULL DEFAULT now(),
-    engine_clock_at BIGINT NOT NULL,            -- pseudo clock millis at time of apply
+    engine_clock_at BIGINT NOT NULL,
     rules_fired     INTEGER,
     duration_ms     INTEGER,
     error           TEXT
@@ -701,9 +582,8 @@ CHECKPOINTS
   GET    /api/v1/checkpoints/latest             Latest metadata
 
 OPERATIONS
-  GET    /api/v1/health                         K8s readiness
-  GET    /api/v1/health/live                    K8s liveness
-  GET    /api/v1/metrics                        Prometheus
+  GET    /api/v1/health                         Readiness
+  GET    /api/v1/health/live                    Liveness
 
 STREAMING
   GET    /api/v1/stream                         SSE: all changes
@@ -742,7 +622,7 @@ Permissions:
   CHECKPOINT_READ    GET /checkpoints
   CHECKPOINT_WRITE   POST /checkpoints
   STREAM_READ        GET /stream/**
-  HEALTH_READ        GET /health, /metrics
+  HEALTH_READ        GET /health
 
 Typical assignments:
   crm-service:     [CHANGESET_WRITE, FACT_READ]
@@ -789,105 +669,6 @@ Typical assignments:
 - Async persistence: bounded queue (10K), batch flush (500 entries)
 - Explanation: on-demand graph traversal, never blocks rules
 - Base facts have trivial provenance ("changeset X") — cheap
-
----
-
-## Kubernetes Deployment
-
-### Dockerfile
-
-```dockerfile
-FROM eclipse-temurin:21-jdk-alpine AS build
-WORKDIR /app
-COPY gradle/ gradle/
-COPY gradlew build.gradle.kts settings.gradle.kts ./
-RUN ./gradlew dependencies --no-daemon
-COPY src/ src/
-RUN ./gradlew build -x test --no-daemon
-
-FROM eclipse-temurin:21-jre-alpine
-WORKDIR /app
-RUN addgroup -S engine && adduser -S engine -G engine
-USER engine
-COPY --from=build /app/build/quarkus-app/ ./
-ENV JAVA_OPTS="-Xmx3g -XX:+UseZGC -XX:+ZGenerational"
-EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "quarkus-run.jar"]
-```
-
-### Deployment
-
-```yaml
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: decision-engine
-spec:
-  replicas: 1                             # Single instance — stateful
-  strategy:
-    type: Recreate                        # No rolling — one instance at a time
-  selector:
-    matchLabels:
-      app: decision-engine
-  template:
-    metadata:
-      labels:
-        app: decision-engine
-      annotations:
-        prometheus.io/scrape: "true"
-        prometheus.io/path: /api/v1/metrics
-        prometheus.io/port: "8080"
-    spec:
-      terminationGracePeriodSeconds: 60
-      containers:
-        - name: engine
-          image: decision-engine:latest
-          ports:
-            - containerPort: 8080
-          envFrom:
-            - secretRef:
-                name: decision-engine-db
-          resources:
-            requests:
-              memory: "2Gi"
-              cpu: "1"
-            limits:
-              memory: "4Gi"
-              cpu: "4"
-          livenessProbe:
-            httpGet:
-              path: /api/v1/health/live
-              port: 8080
-            initialDelaySeconds: 30
-            periodSeconds: 10
-          readinessProbe:
-            httpGet:
-              path: /api/v1/health
-              port: 8080
-            initialDelaySeconds: 30
-            periodSeconds: 5
-          lifecycle:
-            preStop:
-              httpGet:
-                path: /api/v1/internal/shutdown
-                port: 8080
-```
-
-### Graceful Shutdown
-
-```
-SIGTERM received
-    │
-    ▼
- 1. Set state = DRAINING (new changesets → 503)
- 2. SSE streams receive "shutting-down" event
- 3. Wait for in-flight changeset to complete
- 4. Take final checkpoint
- 5. Flush provenance queue
- 6. ksession.halt() → ksession.dispose()
- 7. Close DB connections
- 8. Exit
-```
 
 ---
 
@@ -949,32 +730,6 @@ JVM: `-Xmx3g -XX:+UseZGC -XX:+ZGenerational`
 
 ---
 
-## Observability (Prometheus Metrics)
-
-```
-engine_fact_count{category="base|derived|event"}
-engine_changeset_applied_total
-engine_changeset_duration_seconds (histogram)
-engine_changeset_entries_per_changeset (summary)
-engine_rules_fired_total
-engine_rules_fired_per_changeset (summary)
-engine_checkpoint_total
-engine_checkpoint_duration_seconds (histogram)
-engine_checkpoint_size_bytes (gauge)
-engine_provenance_queue_size (gauge)
-engine_provenance_persisted_total
-engine_events_expired_total
-engine_temporal_window_max_seconds (gauge)
-engine_session_uptime_seconds (gauge)
-engine_session_memory_bytes (gauge)
-engine_rule_version_active (info)
-engine_hot_swap_total
-engine_hot_swap_duration_seconds (histogram)
-engine_recovery_duration_seconds (gauge)
-```
-
----
-
 ## Key Invariants
 
 1. **Changesets are the only write path.** No direct fact manipulation.
@@ -1002,162 +757,3 @@ Integration testing:
   Testcontainers (PostgreSQL)
   Full lifecycle: bootstrap → changesets → checkpoint → kill → recover → verify
 ```
-
----
-
-## Implementation Phases
-
-### Phase 0: Project Skeleton
-**Goal:** Buildable, runnable, empty Quarkus app with all tooling wired.
-
-- [ ] Initialize Gradle project with Kotlin DSL, `libs.versions.toml`
-- [ ] Add Quarkus BOM, Drools 8.x, jOOQ, Flyway, Jackson, LZ4, MessagePack dependencies
-- [ ] `DecisionEngineApp.java` — bare Quarkus main class
-- [ ] `application.properties` — dev profile with PostgreSQL, Flyway, logging
-- [ ] `docker-compose.yml` — PostgreSQL 16 for local dev
-- [ ] Flyway migrations: `V001` through `V005` (all five tables)
-- [ ] `JooqProducer.java` — CDI producer for `DSLContext`
-- [ ] Verify: `gradle quarkusDev` starts, Flyway runs, `/q/health` responds
-
-**Test:** App starts, schema exists, jOOQ can query `changeset_log`.
-
----
-
-### Phase 1: Engine Core — Session + Changeset Processing
-**Goal:** Accept a changeset via REST, insert base facts into a live KieSession, fire rules, return results.
-
-- [ ] `EngineConfig.java` — typed config (`@ConfigMapping`) for engine settings
-- [ ] `RuleCompiler.java` — compile DRL string → `KieBase` (STREAM mode, EQUALITY, pseudo clock)
-- [ ] `EngineSession.java` — lifecycle: create KieSession, wire clock, `fireUntilHalt()` on background thread, `halt()`/`dispose()`
-- [ ] `SessionLock.java` — `ReentrantLock`-based single-writer guard
-- [ ] `FactRegistry.java` — `Map<String, FactHandle>` for base facts, keyed by `factKey`
-- [ ] `Changeset.java`, `ChangesetEntry.java`, `EntryKind.java`, `ChangesetAction.java` — immutable records
-- [ ] `ChangesetValidator.java` — validate structure, fact types against KieBase
-- [ ] `ChangesetProcessor.java` — acquire lock → validate → apply UPSERT/DELETE → `fireAllRules()` → return effects
-- [ ] `ChangesetLog.java` — append to `changeset_log` table via jOOQ
-- [ ] `ChangesetResource.java` — `POST /api/v1/changesets`, `GET /api/v1/changesets`, `GET /api/v1/changesets/{id}`
-- [ ] `FactResource.java` — `GET /api/v1/facts`, `GET /api/v1/facts/{factKey}`, `/types`, `/stats`
-- [ ] DTOs: `ChangesetRequest`, `ChangesetResponse`, `FactResponse`, `ErrorResponse`
-- [ ] `ErrorMapper.java` — structured error responses
-- [ ] Bootstrap DRL: `bootstrap-rules.drl` with a simple test rule using `insertLogical()`
-- [ ] `EngineSessionTest.java` — session starts, accepts facts, fires rules
-- [ ] `ChangesetProcessorTest.java` — UPSERT inserts, re-UPSERT updates, DELETE removes, effects counted
-
-**Test:** `curl POST /changesets` with a fact → rule fires → derived fact appears in response.
-
----
-
-### Phase 2: Checkpoints + Recovery
-**Goal:** Serialize base facts to PostgreSQL, restore from checkpoint on startup.
-
-- [ ] `FactSerializer.java` — serialize/deserialize base facts via MessagePack + LZ4
-- [ ] `CheckpointStore.java` — write/read `checkpoints` table (BYTEA blob + metadata)
-- [ ] `CheckpointManager.java` — triggered every N changesets or M minutes; serializes base facts + FactRegistry + clock state
-- [ ] `CheckpointRecovery.java` — on startup: load latest checkpoint → deserialize base facts → rebuild FactRegistry → set clock
-- [ ] `ChangesetReplayer.java` — replay changesets after checkpoint's `sequence_num` → apply each → `fireAllRules()`
-- [ ] `CheckpointResource.java` — `POST /api/v1/checkpoints`, `GET /api/v1/checkpoints`, `GET /api/v1/checkpoints/latest`
-- [ ] Update `EngineSession` startup: run recovery sequence (checkpoint → replay → `fireUntilHalt()`)
-- [ ] `CheckpointRoundTripTest.java` — checkpoint → dispose → restore → verify all base facts present
-- [ ] `CrashRecoveryTest.java` — insert facts → checkpoint → apply more changesets → simulate restart → verify full state
-
-**Test:** Kill and restart the engine; state is identical to before the kill.
-
----
-
-### Phase 3: CEP — Events + Temporal Reasoning
-**Goal:** Support event entry points, temporal operators, sliding windows, and pseudo clock.
-
-- [ ] `ClockManager.java` — manage pseudo clock: advance to timestamp, switch pseudo ↔ real-time
-- [ ] Update `ChangesetProcessor` — handle `kind: EVENT` / `action: EMIT`: insert via `ksession.getEntryPoint(name)`, advance clock to event timestamp
-- [ ] `EventReplayWindow.java` — calculate `max_replay_window` from DRL `@expires` and temporal rule windows
-- [ ] Update `ChangesetReplayer` — during replay, use pseudo clock; advance clock per event timestamp; after replay switch to real-time
-- [ ] Update `CheckpointRecovery` — calculate `replay_from = checkpoint_clock - max_replay_window`; query changeset_log for events within window
-- [ ] Events API: `GET /api/v1/events` (in-memory, not expired), `GET /api/v1/events/entry-points`
-- [ ] Test DRL: `cep-rules.drl` — event declaration with `@role(event)`, `@timestamp`, `@expires`, sliding window rule
-- [ ] `EventExpirationTest.java` — insert events → advance clock past `@expires` → verify events garbage-collected
-- [ ] `CheckpointWithEventsTest.java` — checkpoint doesn't contain events; events replayed from log on restore
-- [ ] `EventWindowReplayTest.java` — events within replay window are re-inserted; events outside are not
-
-**Test:** Submit events → temporal rule fires within window → advance clock → event expires → derived fact auto-retracts via TMS.
-
----
-
-### Phase 4: Provenance + Explanations
-**Goal:** Track why every derived fact exists, produce human-readable explanations.
-
-- [ ] `ProvenanceAgendaListener.java` — on `afterMatchFired`: capture rule name, matched facts, salience
-- [ ] `ProvenanceRuntimeListener.java` — on `objectInserted`/`objectRetracted`: capture fact lifecycle, correlate with firing context
-- [ ] `ProvenanceTracker.java` — in-memory derivation graph: derived fact → (rule, input facts) → upstream derived facts → base facts/events
-- [ ] `DerivationTree.java` — tree/DAG structure for a single derived fact's full provenance
-- [ ] `Explainer.java` — walk derivation tree → produce human-readable text (template-based)
-- [ ] `ProvenanceStore.java` — async batched persistence to `fact_provenance` + `fact_modifications` tables; bounded queue (10K), batch flush (500)
-- [ ] `ProvenanceExporter.java` — export derivation graph as DOT or JSON
-- [ ] `ProvenanceResource.java` — all provenance endpoints: `/provenance/{factId}`, `/tree`, `/explain`, `/graph`, `/impact`, `/by-rule/{name}`
-- [ ] DTOs: `ProvenanceResponse`, `ExplainResponse`
-- [ ] Wire listeners into `EngineSession` (and re-wire during hot swap)
-- [ ] `ProvenanceTrackerTest.java` — rule fires → derivation tree correctly links inputs to output
-- [ ] `ExplainerTest.java` — derivation tree → readable explanation text
-- [ ] `CepProvenanceTest.java` — event-triggered rule → provenance includes temporal context (window, event timestamps)
-
-**Test:** Insert facts → rules fire → `GET /provenance/{factId}/explain` returns accurate multi-step explanation.
-
----
-
-### Phase 5: Rule Hot Swap
-**Goal:** Upload new DRL, zero-downtime transition to new rules.
-
-- [ ] `RuleHotSwapper.java` — the 15-step procedure: compile → validate compatibility → lock → checkpoint → new session → transfer facts → replay events → wire listeners → fire → swap → dispose old → persist version → unlock
-- [ ] Rule version persistence: `rule_versions` table (jOOQ)
-- [ ] `RuleResource.java` — `POST /api/v1/rules` (upload + activate), `POST /rules/validate`, `GET /rules/current`, `GET /rules/versions`, `POST /rules/rollback/{versionId}`
-- [ ] DTOs: `RuleUploadRequest`, `RuleUploadResponse`
-- [ ] Rollback: restore from pre-swap checkpoint if any step fails
-- [ ] `RuleHotSwapperTest.java` — swap rules → base facts preserved → derived facts re-derived under new rules
-- [ ] `HotSwapWithCepTest.java` — swap while events are in-flight → events replayed into new session → temporal rules still work
-
-**Test:** Upload new DRL → old derived facts retracted → new derived facts appear → base facts untouched → no downtime.
-
----
-
-### Phase 6: Auth + API Hardening
-**Goal:** Secure the API, add query support, SSE streaming.
-
-- [ ] `ApiKeyFilter.java` — `@Provider` JAX-RS filter; hash incoming key, look up in `api_keys`, check permissions against endpoint
-- [ ] `QueryResource.java` — `POST /api/v1/queries/{queryName}` executes DRL named queries; `GET /queries` lists available queries
-- [ ] `EventStreamResource.java` — SSE endpoints: `/stream`, `/stream/derived`, `/stream/derived/{type}`; emit events on fact changes
-- [ ] `HealthResource.java` — readiness (session loaded + DB reachable) and liveness (thread alive) probes
-- [ ] DTOs: `QueryRequest`, `QueryResponse`, `HealthResponse`
-- [ ] Derived facts API: `GET /api/v1/derived`, `GET /api/v1/derived/{factId}`
-- [ ] `AuthFilterTest.java` — missing key → 401, wrong permissions → 403, valid key → pass
-- [ ] OpenAPI annotations on all resources; verify Swagger UI at `/q/swagger-ui`
-
-**Test:** Full API surface exercised with correct and incorrect API keys.
-
----
-
-### Phase 7: Observability + Deployment
-**Goal:** Production-ready metrics, Docker image, K8s manifests.
-
-- [ ] Micrometer metrics: all counters/gauges/histograms listed in Observability section
-- [ ] Graceful shutdown: `@PreDestroy` → drain → final checkpoint → flush provenance → halt session → close DB
-- [ ] Dockerfile: multi-stage build (JDK build → JRE runtime)
-- [ ] K8s manifests: Deployment (Recreate), Service, ConfigMap, HPA
-- [ ] `FullLifecycleTest.java` — end-to-end: bootstrap → changesets → checkpoint → hot swap → events → provenance → recovery
-
-**Test:** `docker build` succeeds; container starts and passes readiness probe; Prometheus scrape returns metrics.
-
----
-
-### Phase Dependency Graph
-
-```
-Phase 0 ─→ Phase 1 ─→ Phase 2 ─→ Phase 3
-                │                     │
-                └──→ Phase 4 ←────────┘
-                         │
-                         ▼
-                     Phase 5 ─→ Phase 6 ─→ Phase 7
-```
-
-Phases 2 and 4 can partially overlap (provenance doesn't need checkpoints, but CEP provenance tests need Phase 3).
-Phase 5 depends on 2 (checkpoints for rollback), 3 (event replay), and 4 (re-wire listeners).
-Phase 6 and 7 are hardening — no new engine logic.
